infra/k8s/db/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: amang-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
